# Banking-Management-System

./: .gitignore  CMakeLists.txt  README.md  banking.db-shm  banking.db-wal  build.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
docs/: architecture.md  build-guide.md  database-schema.md  dev-assignments.md  diagrams.md  git-workflow.md  rules.md
include/: database.h
include/admin/: admin_menu.h  approval.h  user_mgmt.h
include/auth/: auth.h  password.h  session.h
include/database/: db.h  schema.h
include/models/: account.h  transaction.h  user.h
include/user/: transfer.h  user_account.h  user_menu.h
src/: database.cpp  main.cpp
src/admin/: admin_menu.cpp  approval.cpp  user_mgmt.cpp
src/auth/: auth.cpp  password.cpp  session.cpp
src/database/: db.cpp  schema.cpp
src/models/: account.cpp  transaction.cpp  user.cpp
src/user/: transfer.cpp  user_account.cpp  user_menu.cpp
updatelog/: dev1.md  dev2.md  dev4.md
